src/objects/Evaluation_Response__c.object
<CustomObject>
    <fields>
        <fullName>Wound_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wound_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Abrasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traumatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Negative_Cultures__c</fullName>
        <label>2 Negative Cultures</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eSigned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eSigned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eSigned_On__c</fullName>
        <label>eSigned On</label>
        <type>Date</type>
    </fields>
    <label>Evaluation Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Evaluation Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Responses</pluralLabel>
    <recordTypes>
        <fullName>ABG_Detail</fullName>
        <active>true</active>
        <label>ABG Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Additional_Chosen_Services</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Additional Chosen Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Allergy</fullName>
        <active>true</active>
        <label>Allergy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annotation</fullName>
        <active>true</active>
        <label>Annotation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assistive_Device</fullName>
        <active>true</active>
        <label>Assistive Device</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assistive_Device_CA</fullName>
        <active>true</active>
        <label>Assistive Device CA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assistive_Device_MN</fullName>
        <active>true</active>
        <label>Assistive Device MN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assistive_Device_OH</fullName>
        <active>true</active>
        <label>Assistive Device OH</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assistive_Devices</fullName>
        <active>true</active>
        <label>Assistive Devices</label>
    </recordTypes>
    <recordTypes>
        <fullName>Auto_Incident_Investigation_JO</fullName>
        <active>true</active>
        <label>Auto Incident Investigation JO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chem_Detail</fullName>
        <active>true</active>
        <label>Chem Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Transportation_Services</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Community Transportation Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contracture_Detail</fullName>
        <active>true</active>
        <label>Contracture Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contributors_Signatures</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Contributors &amp; Signatures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contributors_Signatures_Data</fullName>
        <active>true</active>
        <description>This is used in OR Combined ISP</description>
        <label>Contributors &amp; Signatures Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decubiti_Detail</fullName>
        <active>true</active>
        <label>Decubiti Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decubity_Detail</fullName>
        <active>true</active>
        <label>Decubity Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Desired_Outcomes</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Desired Outcomes</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_Signature</fullName>
        <active>true</active>
        <label>E-Signature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education_Level_Mapping</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Education Level Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_Outcomes</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Employment Outcomes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Evaluation</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fluid_Intake</fullName>
        <active>true</active>
        <description>This record type is used to facilitate multiple entries for Fluid intake in CMShiftAssessment Nutrition Tab</description>
        <label>Fluid Intake</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fracture_Detail</fullName>
        <active>true</active>
        <label>Fracture Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISP_Risk</fullName>
        <active>true</active>
        <label>ISP Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISP_Service_Code</fullName>
        <active>true</active>
        <label>ISP Service Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Im_AddendumLogEntry</fullName>
        <active>true</active>
        <description>this is used to add narrative notes to a finalized incident</description>
        <label>Im_AddendumLogEntry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Im_IncidentResponsePlan</fullName>
        <active>true</active>
        <label>Im_IncidentResponsePlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Im_InvestigationLogEntry</fullName>
        <active>true</active>
        <description>this is used to add supporting info to an incident investigation</description>
        <label>Im_InvestigationLogEntry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Im_ResponsePlanActivities</fullName>
        <active>true</active>
        <label>Im_ResponsePlanActivities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Immunization_Adult</fullName>
        <active>true</active>
        <label>Immunization - Adult</label>
    </recordTypes>
    <recordTypes>
        <fullName>Immunization_Child</fullName>
        <active>true</active>
        <label>Immunization - Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Isolation_Event</fullName>
        <active>true</active>
        <description>Record Type used to record Isolation Events</description>
        <label>Isolation Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>K_Plan_Services</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>K Plan Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lab_Detail</fullName>
        <active>true</active>
        <label>Lab Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Late_Entry_Note</fullName>
        <active>true</active>
        <label>Late Entry Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual_Incident_Investigation_JO</fullName>
        <active>true</active>
        <label>Manual Incident Investigation JO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Micro_Detail</fullName>
        <active>true</active>
        <label>Micro Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>NeuroAnnotation</fullName>
        <active>true</active>
        <description>This record type is used for Body Map function on Neuro Tab for NursesAssessment</description>
        <label>NeuroAnnotation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Orthostatic_BP</fullName>
        <active>true</active>
        <label>Orthostatic BP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Services_Supports</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Other Services Supports</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPD_Skin_Test</fullName>
        <active>true</active>
        <label>PPD Skin Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>PPD_Skin_Test_RW_CA</fullName>
        <active>true</active>
        <label>PPD Skin Test RW CA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pain</fullName>
        <active>true</active>
        <label>Pain</label>
    </recordTypes>
    <recordTypes>
        <fullName>PressureUlcer_Detail</fullName>
        <active>true</active>
        <label>Pressure Ulcer Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pressure_Ulcer_Detail_Log</fullName>
        <active>true</active>
        <label>Pressure Ulcer Detail Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Radiology_Detail</fullName>
        <active>true</active>
        <label>Radiology Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restraint_Action</fullName>
        <active>true</active>
        <description>This Record Type is Created to Capture Restraint Actions for a Restraint Event</description>
        <label>Restraint Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Surgery_Detail</fullName>
        <active>true</active>
        <label>Surgery Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>TMN_Provider_Application_Notes</fullName>
        <active>true</active>
        <label>TMN Provider Application Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>TMN_Provider_Notes</fullName>
        <active>true</active>
        <label>TMN Provider Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Log</fullName>
        <active>true</active>
        <description>Used to keep track of coming/going of day program attendees</description>
        <label>Time Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transportation_Services</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Transportation Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vitals_Detail</fullName>
        <active>true</active>
        <label>Vitals Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vitals_Details_Shift_Assessment</fullName>
        <active>true</active>
        <label>Vitals Details Shift Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waiver_Services</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>Waiver Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wound_Detail</fullName>
        <active>true</active>
        <label>Wound Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wound_Detail_Log</fullName>
        <active>true</active>
        <description>The activity log entries for Wound Detail.</description>
        <label>Wound Detail Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AssisDev_EndDateLessStart</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName == &apos;Assistive_Device&apos; || RecordType.DeveloperName == &apos;Assistive_Device_CA&apos;|| RecordType.DeveloperName == &apos;Assistive_Device_MN&apos;)&amp;&amp; 
Assistive_Device_End_Date__c &lt; Assistive_Device_Start_Date__c</errorConditionFormula>
        <errorMessage>End Date must be after Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AssisDev_StartGreaterThenEnd</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName == &apos;Assistive_Device&apos; || RecordType.DeveloperName == &apos;Assistive_Device_CA&apos;|| RecordType.DeveloperName == &apos;Assistive_Device_MN&apos;) &amp;&amp; 
Assistive_Device_Start_Date__c &gt; Assistive_Device_End_Date__c</errorConditionFormula>
        <errorMessage>Start Date must be before or on End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Block_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>Date__c &gt; today()
&amp;&amp;
(
 RecordType.DeveloperName = &apos;Immunization_Adult&apos; ||
RecordType.DeveloperName = &apos;Immunization_Child&apos;
||
RecordType.DeveloperName = &apos;PPD_Skin_Test&apos; 
)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date can not be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Block_future_date_AssisDev</fullName>
        <active>true</active>
        <errorConditionFormula>Assistive_Device_Start_Date__c  &gt; today()
&amp;&amp;
(
RecordType.DeveloperName == &apos;Assistive_Device&apos; || RecordType.DeveloperName == &apos;Assistive_Device_CA&apos;|| RecordType.DeveloperName == &apos;Assistive_Device_MN&apos;
)</errorConditionFormula>
        <errorDisplayField>Assistive_Device_Start_Date__c</errorDisplayField>
        <errorMessage>Date can not be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PPD_RWCA_Requires_Chest_XRay_Result</fullName>
        <active>true</active>
        <description>Require Chest X-Ray Result to be populated when Chest X-Ray Attached is checked(true)</description>
        <errorConditionFormula>AND( ( Chest_X_Ray_Attached__c = true ), 
ISBLANK( Chest_X_Ray_Result__c ),
RecordType.DeveloperName = &apos;PPD_Skin_Test_RW_CA&apos;)</errorConditionFormula>
        <errorDisplayField>Chest_X_Ray_Result__c</errorDisplayField>
        <errorMessage>Chest X-Ray Result is required when Chest X-Ray Attached is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PPD_Requires_ReadInfo</fullName>
        <active>true</active>
        <description>Require Results and Read By to be populated when Date Read is filled in.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Time_Observed__c )), 
OR(ISBLANK( Result_in_mm__c ), ISBLANK( Read_By__c )), 
($RecordType.DeveloperName = &apos;PPD_Skin_Test&apos; ||
RecordType.DeveloperName = &apos;PPD_Skin_Test_RW_CA&apos;))</errorConditionFormula>
        <errorDisplayField>Read_By__c</errorDisplayField>
        <errorMessage>Results and Read By are required when Date Read is filled in</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vaccine_Typc_Other</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Other__c) &amp;&amp; 
ISPICKVAL(Vaccine_Type__c, &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>Other is required</errorMessage>
    </validationRules>
</CustomObject>